Beta 1.12.0.1